--- a/Combee/App.xaml
+++ b/Combee/App.xaml
@@ -1,5 +1,6 @@
 ﻿<Application 
     x:Class="Combee.App"
+    xmlns:StartupUri="login.xaml"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
