--- a/Combee/Post.xaml
+++ b/Combee/Post.xaml
@@ -25,7 +25,7 @@
                             <Border BorderThickness="1" Width="99" Height="99" BorderBrush="#FFFFC700" Background="#FFFFC700" Margin="10,0,20,0" HorizontalAlignment="Right"/>
                             <TextBlock x:Name="TitleTextBlock" Text="" TextWrapping="Wrap" Margin="0,-99,120,0" FontSize="30"/>
                             <TextBlock x:Name="FromTextBlock" Tag="{Binding postId}" Text="" TextAlignment="Right" Margin="9,-32,24,0" Style="{StaticResource PhoneTextNormalStyle}"/>
-                            <phone:WebBrowser x:Name="ContentBrowser" />
+                            <phone:WebBrowser x:Name="ContentBrowser" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Visibility="Visible" VerticalAlignment="Top" Height="600" />
                             <!--<TextBlock x:Name="mainTextBlock" Text="正在加载中, 请稍候..." FontSize="{StaticResource PhoneFontSizeLarge}" TextWrapping="Wrap"/>-->
                             
                         </StackPanel>
