--- a/Combee/Test.xaml
+++ b/Combee/Test.xaml
@@ -11,7 +11,7 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="True" Loaded="PhoneApplicationPage_Loaded">
 
     <!--LayoutRoot 是包含所有页面内容的根网格-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
@@ -35,6 +35,7 @@
                     <TextBlock x:Name="YourTextBlock" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="436"/>
                 </ScrollViewer>-->
             <Button x:Name="MyButton" Content="Button" HorizontalAlignment="Left" Margin="100,470,0,0" VerticalAlignment="Top" RenderTransformOrigin="-4.496,-0.873" Height="105" Width="211" Click="MyButton_Click"/>
+            <phone:WebBrowser x:Name="wb" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
         </Grid>
     </Grid>
 
