--- a/Combee/login.xaml
+++ b/Combee/login.xaml
@@ -15,10 +15,10 @@
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar Opacity="1" BackgroundColor="#FF252C32">
             <shell:ApplicationBar.MenuItems>
-                <shell:ApplicationBarMenuItem x:Name="WebSiteButton" IsEnabled="True" Text="访问官网"/>
+                <shell:ApplicationBarMenuItem x:Name="WebSiteButton" IsEnabled="True" Text="访问官网" Click="WebSiteButton_Click"/>
             </shell:ApplicationBar.MenuItems>
-            <shell:ApplicationBarIconButton x:Name="HelpButton" IconUri="/Assets/AppBar/questionmark.png" IsEnabled="True" Text="帮助"/>
-            <shell:ApplicationBarIconButton x:Name="SupportButton" IconUri="/Assets/AppBar/feature.calendar.png" IsEnabled="True" Text="支持"/>
+            <shell:ApplicationBarIconButton x:Name="LoginButton" IconUri="/Images/appbar.check.rest.png" IsEnabled="True" Text="登录" Click="LoginButton_Click"/>
+            <shell:ApplicationBarIconButton x:Name="HelpButton" IconUri="/Assets/AppBar/questionmark.png" IsEnabled="True" Text="帮助" Click="HelpButton_Click"/>
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
 
@@ -30,29 +30,34 @@
         </Grid.RowDefinitions>
 
         <!--TitlePanel 包含应用程序的名称和页标题-->
-        <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="Combee - 组织消息通知中心" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="登录" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+        <StackPanel Grid.Row="0" Margin="12,27,0,13" >
+            <TextBlock Opacity="50" Text="Combee - 组织消息通知中心" Style="{StaticResource PhoneTextNormalStyle}"/>
         </StackPanel>
 
         <!--ContentPanel - 在此处放置其他内容-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,20,12,0">
             <ScrollViewer>
-                <StackPanel >
+                <StackPanel Orientation="Vertical">
+                    
                     <TextBlock Text="用户名(手机号/邮箱):" FontSize="{StaticResource PhoneFontSizeMedium}" Margin="12,0,0,0" HorizontalAlignment="Left"/>
-                    <TextBox x:Name="UserNameTextBox" Height="70" Margin="0,0,20,20" HorizontalAlignment="Stretch" KeyDown="UserNameTextBox_KeyDown">
+                    <TextBox x:Name="UserNameTextBox" Height="70" FontSize="24" Text="15528258522" Margin="0,-10,20,0" HorizontalAlignment="Stretch" KeyDown="UserNameTextBox_KeyDown">
                         <TextBox.InputScope>
                             <InputScope >
                                 <InputScopeName NameValue="NameOrPhoneNumber"/>
+                                <InputScopeName NameValue="EmailNameOrAddress"/>
                             </InputScope>
                         </TextBox.InputScope>
                     </TextBox>
                     <TextBlock Text="密码:" FontSize="{StaticResource PhoneFontSizeMedium}" Margin="12,0,0,0" HorizontalAlignment="Left"/>
-                    <PasswordBox x:Name="PasswordTextBox" Height="70" Margin="0,0,20,0" HorizontalAlignment="Stretch" MaxLength="17" KeyDown="PasswordTextBox_KeyDown" />
-                    <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
+                    <PasswordBox x:Name="PasswordTextBox" Height="70" FontSize="24" Margin="0,-10,20,0" HorizontalAlignment="Stretch" MaxLength="17" KeyDown="PasswordTextBox_KeyDown" />
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock x:Name="RegisterBlock" Text="注册帐号" Margin="20,20,0,10" Tap="RegisterBlock_Tap"/>
+                        <TextBlock x:Name="LostBlock" Text="找回密码" Margin="20,0,0,10" Tap="LostBlock_Tap"/>
+                    </StackPanel>
+                    <!--<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,0,0">
                         <Button x:Name="LoginButton" Height="80" Width="200" Margin="0,20,0,0" HorizontalAlignment="Left" Content="登录" FontSize="30" BorderBrush="White" Click="LoginButton_Click"/>
                         <Button x:Name="RegisterButton" Height="80" Width="200" Margin="0,20,0,0" HorizontalAlignment="Left" Content="注册" FontSize="30" BorderBrush="White"/>
-                    </StackPanel>
+                    </StackPanel>-->
                     <Image Source="/Combee;component/Assets/Combee.png" Margin="20"/>
                 </StackPanel>
             </ScrollViewer>
