--- a/Combee/login.xaml
+++ b/Combee/login.xaml
@@ -39,8 +39,8 @@
             <ScrollViewer>
                 <StackPanel Orientation="Vertical">
                     
-                    <TextBlock Text="用户名(手机号/邮箱):" FontSize="{StaticResource PhoneFontSizeMedium}" Margin="12,0,0,0" HorizontalAlignment="Left"/>
-                    <TextBox x:Name="UserNameTextBox" Height="70" FontSize="24" Text="15528258522" Margin="0,-10,20,0" HorizontalAlignment="Stretch" KeyDown="UserNameTextBox_KeyDown">
+                    <!--<TextBlock Text="用户名(手机号/邮箱)" FontSize="28" Margin="32,10,0,-50" HorizontalAlignment="Left" />-->
+                    <TextBox x:Name="UserNameTextBox" Height="70" FontSize="24" Text="电子邮件/电话" Margin="0,10,20,0" HorizontalAlignment="Stretch" KeyDown="UserNameTextBox_KeyDown" GotFocus="UserNameTextBox_GotFocus" LostFocus="UserNameTextBox_LostFocus">
                         <TextBox.InputScope>
                             <InputScope >
                                 <InputScopeName NameValue="NameOrPhoneNumber"/>
@@ -48,8 +48,11 @@
                             </InputScope>
                         </TextBox.InputScope>
                     </TextBox>
-                    <TextBlock Text="密码:" FontSize="{StaticResource PhoneFontSizeMedium}" Margin="12,0,0,0" HorizontalAlignment="Left"/>
-                    <PasswordBox x:Name="PasswordTextBox" Height="70" FontSize="24" Margin="0,-10,20,0" HorizontalAlignment="Stretch" MaxLength="17" KeyDown="PasswordTextBox_KeyDown" />
+                    <!--<TextBlock Text="密码:" FontSize="28" Margin="32,18,0,-50" HorizontalAlignment="Left"/>-->
+                    <Grid>
+                        <TextBox x:Name="TempTextBox" Height="70" FontSize="24" Text="密码" Margin="0,0,20,0" HorizontalAlignment="Stretch" KeyDown="UserNameTextBox_KeyDown"/>
+                        <PasswordBox x:Name="PasswordTextBox" Opacity="0" Height="70" FontSize="24" Password="" Margin="0,0,20,0" HorizontalAlignment="Stretch" MaxLength="17" KeyDown="PasswordTextBox_KeyDown" GotFocus="PasswordTextBox_GotFocus" LostFocus="PasswordTextBox_LostFocus" />
+                    </Grid>
                     <StackPanel Orientation="Vertical">
                         <TextBlock x:Name="RegisterBlock" Text="注册帐号" Margin="20,20,0,10" Tap="RegisterBlock_Tap"/>
                         <TextBlock x:Name="LostBlock" Text="找回密码" Margin="20,0,0,10" Tap="LostBlock_Tap"/>
